cabal-version:      3.0
name:               project
version:            0.1.0.0
license:            NONE
author:             s0sococo
maintainer:         sstandsforstarlet@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared-settings
    build-depends:    base ^>=4.17.2.0, network, bytestring
    hs-source-dirs:   app
    default-language: Haskell2010

executable server
    import:              shared-settings
    main-is:             Server.hs
    other-modules:       Parsers


executable client
    import:              shared-settings
    main-is:             Client.hs
